refactor(build): move task wiring into buildSrc