@@ -1,16 +1,21 @@
-import java.nio.file.Files
-import java.nio.file.FileVisitResult
-import java.nio.file.FileVisitOption
-import java.nio.file.LinkOption
-import java.nio.file.Path
-import java.nio.file.Paths
-import java.nio.file.SimpleFileVisitor
-import java.nio.file.StandardCopyOption
-import java.nio.file.attribute.BasicFileAttributes
-import java.nio.file.attribute.PosixFilePermission
-import java.io.ByteArrayOutputStream
-import java.io.File
-import java.util.EnumSet
+import buildlogic.application.ApplicationTaskSupport
+import buildlogic.application.registerApplyCreatureOverridesTask
+import buildlogic.application.registerBackfillCreatureAnalysisTask
+import buildlogic.application.registerCrawlerItemsPipelineTask
+import buildlogic.application.registerCrawlerItemsSlugsTask
+import buildlogic.application.registerCrawlerItemsTask
+import buildlogic.application.registerCrawlerMonstersTask
+import buildlogic.application.registerCrawlerSpellsPipelineTask
+import buildlogic.application.registerCrawlerSpellsSlugsTask
+import buildlogic.application.registerCrawlerSpellsTask
+import buildlogic.application.registerCrawlerTask
+import buildlogic.application.registerImportItemsTask
+import buildlogic.application.registerImportMonstersTask
+import buildlogic.application.registerImportSpellsTask
+import buildlogic.application.registerRebuildCreatureAnalysisTask
+import buildlogic.application.registerRecoverEncounterTablesTask
+import buildlogic.application.registerSqliteQueryTask
+import buildlogic.cleanup.registerDeleteEmptySourceDirectoriesTask
 import buildlogic.ownerconvention.OwnerConventionSupport
 import buildlogic.ownerconvention.registerCheckOwnerApiBoundaryConventionTask
 import buildlogic.ownerconvention.registerCheckOwnerApiBoundaryInputFilesTask
@@ -19,10 +24,24 @@ import buildlogic.ownerconvention.registerCheckOwnerApiBoundaryRepositoryFilesTa
 import buildlogic.ownerconvention.registerCheckOwnerApiBoundarySourcePlacementTask
 import buildlogic.ownerconvention.registerCheckOwnerApiBoundaryStateFilesTask
 import buildlogic.ownerconvention.registerCheckOwnerApiBoundaryTaskFilesTask
-import org.gradle.api.tasks.TaskProvider
-import org.gradle.api.tasks.JavaExec
+import buildlogic.packaging.PackagingConfig
+import buildlogic.packaging.PackagingSupport
+import buildlogic.packaging.registerInstallAppImageTask
+import buildlogic.packaging.registerInstallDesktopAppTask
+import buildlogic.packaging.registerInstallDesktopEntriesTask
+import buildlogic.packaging.registerPackageAppImageFallbackTask
+import buildlogic.packaging.registerPackageAppImageTask
+import buildlogic.packaging.registerPrepareRuntimeImageTask
+import buildlogic.packaging.registerStageJpackageInputTask
+import buildlogic.verification.registerCheckDungeonEditorArchitectureConventionTask
+import buildlogic.verification.registerCheckDungeonGeometryConventionTask
+import buildlogic.verification.registerCheckFeatureApiBoundaryConventionTask
+import buildlogic.verification.registerCheckNoCompiledArtifactsInSourceTask
+import buildlogic.verification.registerCheckNoStdStreamsInFeatureServicesAndRepositoriesTask
+import buildlogic.verification.registerCheckRepositorySqlExceptionConventionTask
+import buildlogic.verification.registerCheckUiAsyncSubmissionConventionTask
+import org.gradle.api.tasks.compile.JavaCompile
 import org.gradle.jvm.application.tasks.CreateStartScripts
-import org.gradle.api.tasks.Sync
 
 plugins {
     java
@@ -37,9 +56,6 @@ val jpackageModulePathArg = "--module-path=${'$'}APPDIR"
 val jpackageAddModulesArg = "--add-modules=javafx.controls"
 val desktopIconRelativePath = "icons/salt-marcher.svg"
 val packageVersion = providers.gradleProperty("saltMarcherVersion").orElse("0.1.0")
-val localRuntimeImage = providers.provider {
-    Paths.get(System.getProperty("java.home"))
-}
 
 repositories {
     mavenCentral()
@@ -98,695 +114,52 @@ tasks.test {
     useJUnitPlatform()
 }
 
-val jpackageInputDir = layout.buildDirectory.dir("packaging/jpackage-input")
-val jpackageOutputDir = layout.buildDirectory.dir("packaging/jpackage")
-val jpackageTempDir = layout.buildDirectory.dir("packaging/tmp")
-val preparedRuntimeImageDir = layout.buildDirectory.dir("packaging/runtime-image")
-val packagedAppImageDir = jpackageOutputDir.map { it.dir(launcherName) }
-val packagedAppLibDir = packagedAppImageDir.map { it.dir("app") }
-val packagedAppRuntimeDir = packagedAppImageDir.map { it.dir("runtime") }
-val installedAppDir = providers.provider {
-    Paths.get(System.getProperty("user.home"), ".local", "opt", launcherName)
-}
-val installedDesktopIcon = installedAppDir.map { it.resolve(desktopIconRelativePath) }
-val desktopEntryName = "$desktopAppName.desktop"
-val desktopEntryContent = providers.provider {
-    val execPath = installedAppDir.get().resolve("bin").resolve(launcherName)
-    val iconPath = installedDesktopIcon.get()
-    """
-    [Desktop Entry]
-    Version=1.0
-    Type=Application
-    Name=$desktopAppName
-    Comment=Launch Salt Marcher
-    Exec=${execPath.toAbsolutePath()}
-    Icon=${iconPath.toAbsolutePath()}
-    Terminal=false
-    Categories=Game;Utility;
-    StartupNotify=true
-    """.trimIndent() + "\n"
-}
-
-val stageJpackageInput by tasks.registering(Sync::class) {
-    dependsOn(tasks.named("jar"))
-    from(tasks.named("jar"))
-    from(configurations.runtimeClasspath)
-    into(jpackageInputDir)
-}
-
-val prepareRuntimeImage by tasks.registering {
-    description = "Create a materialized runtime image for jpackage without external symlink dependencies."
-
-    inputs.dir(localRuntimeImage)
-    outputs.dir(preparedRuntimeImageDir)
-
-    doLast {
-        val sourceDir = localRuntimeImage.get().toRealPath()
-        val targetDir = preparedRuntimeImageDir.get().asFile.toPath()
-
-        delete(targetDir.toFile())
-        Files.createDirectories(targetDir)
-        copyRuntimeImage(sourceDir, targetDir)
-    }
-}
-
-val packageAppImage by tasks.registering(Exec::class) {
-    group = "distribution"
-    description = "Build a self-contained Linux app image with jpackage."
-    dependsOn(stageJpackageInput, prepareRuntimeImage)
-
-    val mainJar = tasks.named<Jar>("jar").flatMap { it.archiveFileName }
-    inputs.dir(jpackageInputDir)
-    inputs.file(layout.projectDirectory.file("resources/$desktopIconRelativePath"))
-    inputs.dir(preparedRuntimeImageDir)
-    outputs.dir(packagedAppImageDir)
-
-    onlyIf {
-        resolveJpackageExecutable() != null
-    }
-
-    doFirst {
-        delete(packagedAppImageDir.get().asFile)
-        delete(jpackageTempDir.get().asFile)
-        jpackageOutputDir.get().asFile.mkdirs()
-        jpackageTempDir.get().asFile.mkdirs()
-        val jpackageExecutable = resolveJpackageExecutable()
-            ?: error("jpackage executable not found")
-        commandLine(
-            jpackageExecutable,
-            "--type", "app-image",
-            "--dest", jpackageOutputDir.get().asFile.absolutePath,
-            "--temp", jpackageTempDir.get().asFile.absolutePath,
-            "--input", jpackageInputDir.get().asFile.absolutePath,
-            "--name", launcherName,
-            "--app-version", packageVersion.get(),
-            "--vendor", "Salt Marcher",
-            "--runtime-image", preparedRuntimeImageDir.get().asFile.absolutePath,
-            "--main-jar", mainJar.get(),
-            "--main-class", application.mainClass.get(),
-            "--java-options", jpackageModulePathArg,
-            "--java-options", jpackageAddModulesArg,
-            "--java-options", preloaderJvmArg
-        )
-    }
-}
-
-val packageAppImageFallback by tasks.registering {
-    group = "distribution"
-    description = "Build a self-contained Linux app image without jpackage when the tool is unavailable."
-    dependsOn(stageJpackageInput, prepareRuntimeImage)
-
-    inputs.dir(jpackageInputDir)
-    inputs.dir(preparedRuntimeImageDir)
-    inputs.file(layout.projectDirectory.file("resources/$desktopIconRelativePath"))
-    outputs.dir(packagedAppImageDir)
-
-    onlyIf {
-        resolveJpackageExecutable() == null
-    }
-
-    doLast {
-        val appImageDir = packagedAppImageDir.get().asFile.toPath()
-        val appLibDir = packagedAppLibDir.get().asFile.toPath()
-        val appRuntimeDir = packagedAppRuntimeDir.get().asFile.toPath()
-        val appBinDir = appImageDir.resolve("bin")
-        val launcherFile = appBinDir.resolve(launcherName)
-
-        delete(appImageDir.toFile())
-        Files.createDirectories(appLibDir)
-        Files.createDirectories(appRuntimeDir)
-        Files.createDirectories(appBinDir)
-
-        copy {
-            from(jpackageInputDir)
-            into(appLibDir.toFile())
-        }
-        copyRuntimeImage(preparedRuntimeImageDir.get().asFile.toPath(), appRuntimeDir)
-
-        val launcherScript = """
-            |#!/usr/bin/env sh
-            |set -eu
-            |
-            |APP_DIR="$(CDPATH= cd -- "$(dirname -- "$0")/.." && pwd)"
-            |exec "${'$'}APP_DIR/runtime/bin/java" \
-            |  "$preloaderJvmArg" \
-            |  --module-path "${'$'}APP_DIR/app" \
-            |  --add-modules=javafx.controls \
-            |  -cp "${'$'}APP_DIR/app/*" \
-            |  ${application.mainClass.get()} \
-            |  "${'$'}@"
-            |""".trimMargin()
-        Files.writeString(launcherFile, launcherScript)
-        setExecutableFile(launcherFile)
-    }
-}
-
-val installAppImage by tasks.registering {
-    group = "distribution"
-    description = "Install the packaged app image into ~/.local/opt/salt-marcher."
-    dependsOn(packageAppImage, packageAppImageFallback)
-
-    inputs.dir(packagedAppImageDir)
-    inputs.file(layout.projectDirectory.file("resources/$desktopIconRelativePath"))
-    outputs.dir(installedAppDir)
-
-    doLast {
-        val sourceDir = packagedAppImageDir.get().asFile.toPath()
-        val targetDir = installedAppDir.get()
-        val stagingDir = targetDir.resolveSibling("${targetDir.fileName}.tmp")
-
-        delete(stagingDir.toFile())
-        copy {
-            from(sourceDir)
-            into(stagingDir)
-        }
-
-        val iconTarget = stagingDir.resolve(desktopIconRelativePath)
-        Files.createDirectories(iconTarget.parent)
-        Files.copy(
-            layout.projectDirectory.file("resources/$desktopIconRelativePath").asFile.toPath(),
-            iconTarget,
-            StandardCopyOption.REPLACE_EXISTING
-        )
-
-        delete(targetDir.toFile())
-        Files.move(stagingDir, targetDir, StandardCopyOption.REPLACE_EXISTING)
-    }
-}
-
-val installDesktopEntries by tasks.registering {
-    group = "distribution"
-    description = "Install desktop shortcut entries for the packaged Salt Marcher app."
-    dependsOn(installAppImage)
-
-    inputs.property("desktopEntryContent", desktopEntryContent)
-    outputs.files(
-        providers.provider {
-            val desktopDir = resolveDesktopDirectory()
-            listOf(
-                desktopDir.resolve(desktopEntryName).toFile(),
-                Paths.get(System.getProperty("user.home"), ".local", "share", "applications", "$launcherName.desktop").toFile()
-            )
-        }
+val packagingSupport = PackagingSupport(
+    project = project,
+    config = PackagingConfig(
+        desktopAppName = desktopAppName,
+        launcherName = launcherName,
+        preloaderJvmArg = preloaderJvmArg,
+        jpackageModulePathArg = jpackageModulePathArg,
+        jpackageAddModulesArg = jpackageAddModulesArg,
+        desktopIconRelativePath = desktopIconRelativePath,
+        packageVersion = packageVersion
     )
-
-    doLast {
-        val desktopDir = resolveDesktopDirectory()
-        val desktopFile = desktopDir.resolve(desktopEntryName)
-        val applicationsFile = Paths.get(
-            System.getProperty("user.home"),
-            ".local",
-            "share",
-            "applications",
-            "$launcherName.desktop"
-        )
-
-        Files.createDirectories(desktopDir)
-        Files.createDirectories(applicationsFile.parent)
-        Files.writeString(desktopFile, desktopEntryContent.get())
-        Files.writeString(applicationsFile, desktopEntryContent.get())
-        setExecutableDesktopFile(desktopFile)
-        setExecutableDesktopFile(applicationsFile)
-    }
-}
-
-tasks.register("installDesktopApp") {
-    group = "distribution"
-    description = "Build, install, and register Salt Marcher as a desktop application."
-    dependsOn(installDesktopEntries)
-}
-
-fun resolveDesktopDirectory(): Path {
-    val process = try {
-        ProcessBuilder("xdg-user-dir", "DESKTOP")
-            .redirectErrorStream(true)
-            .start()
-    } catch (_: Exception) {
-        null
-    }
-    val exitValue = process?.waitFor()
-    if (exitValue == 0) {
-        val path = process.inputStream.bufferedReader().use { it.readText() }.trim()
-        if (path.isNotBlank()) {
-            return Paths.get(path)
-        }
-    }
-    return Paths.get(System.getProperty("user.home"), "Schreibtisch")
-}
-
-fun setExecutableDesktopFile(path: Path) {
-    setExecutableFile(path)
-}
-
-fun setExecutableFile(path: Path) {
-    try {
-        Files.setPosixFilePermissions(
-            path,
-            setOf(
-                PosixFilePermission.OWNER_READ,
-                PosixFilePermission.OWNER_WRITE,
-                PosixFilePermission.OWNER_EXECUTE,
-                PosixFilePermission.GROUP_READ,
-                PosixFilePermission.GROUP_EXECUTE,
-                PosixFilePermission.OTHERS_READ,
-                PosixFilePermission.OTHERS_EXECUTE
-            )
-        )
-    } catch (_: UnsupportedOperationException) {
-        // Non-POSIX filesystems still get a valid desktop entry without chmod support.
-    }
-}
-
-fun resolveJpackageExecutable(): String? {
-    val javaHomeJpackage = Paths.get(System.getProperty("java.home"), "bin", executableName("jpackage"))
-    if (Files.isRegularFile(javaHomeJpackage) && Files.isExecutable(javaHomeJpackage)) {
-        return javaHomeJpackage.toString()
-    }
-
-    val pathDirectories = (System.getenv("PATH") ?: "")
-        .split(File.pathSeparatorChar)
-        .filter { it.isNotBlank() }
-    for (directory in pathDirectories) {
-        val candidate = Paths.get(directory, executableName("jpackage"))
-        if (Files.isRegularFile(candidate) && Files.isExecutable(candidate)) {
-            return candidate.toString()
-        }
-    }
-    return null
-}
-
-fun executableName(command: String): String {
-    return if (System.getProperty("os.name").startsWith("Windows", ignoreCase = true)) {
-        "$command.exe"
-    } else {
-        command
-    }
-}
-
-fun copyRuntimeImage(sourceDir: Path, targetDir: Path) {
-    Files.walkFileTree(sourceDir, EnumSet.of(FileVisitOption.FOLLOW_LINKS), Int.MAX_VALUE, object : SimpleFileVisitor<Path>() {
-        override fun preVisitDirectory(dir: Path, attrs: BasicFileAttributes): FileVisitResult {
-            val target = targetDir.resolve(sourceDir.relativize(dir).toString())
-            Files.createDirectories(target)
-            return FileVisitResult.CONTINUE
-        }
-
-        override fun visitFile(file: Path, attrs: BasicFileAttributes): FileVisitResult {
-            val resolvedSource = if (Files.isSymbolicLink(file)) {
-                file.toRealPath()
-            } else {
-                file
-            }
-            val target = targetDir.resolve(sourceDir.relativize(file).toString())
-            Files.createDirectories(target.parent)
-            Files.copy(
-                resolvedSource,
-                target,
-                StandardCopyOption.REPLACE_EXISTING,
-                StandardCopyOption.COPY_ATTRIBUTES
-            )
-            return FileVisitResult.CONTINUE
-        }
-
-        override fun postVisitDirectory(dir: Path, exc: java.io.IOException?): FileVisitResult {
-            if (exc != null) {
-                throw exc
-            }
-            val source = if (Files.isSymbolicLink(dir)) {
-                dir.toRealPath()
-            } else {
-                dir
-            }
-            val target = targetDir.resolve(sourceDir.relativize(dir).toString())
-            if (Files.exists(source, LinkOption.NOFOLLOW_LINKS)) {
-                try {
-                    Files.setLastModifiedTime(target, Files.getLastModifiedTime(source))
-                } catch (_: UnsupportedOperationException) {
-                    // Some filesystems do not support preserving directory timestamps.
-                }
-            }
-            return FileVisitResult.CONTINUE
-        }
-    })
-}
-
-fun registerJavaExecTask(
-    taskName: String,
-    taskDescription: String,
-    taskMainClass: String,
-    dependsOnTask: TaskProvider<*>? = null,
-    taskArgs: List<String> = emptyList()
-): TaskProvider<JavaExec> = tasks.register<JavaExec>(taskName) {
-    group = "application"
-    description = taskDescription
-    classpath = sourceSets.main.get().runtimeClasspath
-    mainClass = taskMainClass
-    if (dependsOnTask != null) {
-        dependsOn(dependsOnTask)
-    }
-    if (taskArgs.isNotEmpty()) {
-        args(taskArgs)
-    }
-}
-
-val crawlerMonsters = registerJavaExecTask(
-    taskName = "crawlerMonsters",
-    taskDescription = "Run monster crawler only.",
-    taskMainClass = "importer.MonsterCrawler"
 )
 
-val importMonsters = registerJavaExecTask(
-    taskName = "importMonsters",
-    taskDescription = "Run monster importer.",
-    taskMainClass = "importer.MonsterImporter",
-    dependsOnTask = crawlerMonsters
-)
+val stageJpackageInput = registerStageJpackageInputTask(packagingSupport)
+val prepareRuntimeImage = registerPrepareRuntimeImageTask(packagingSupport)
+val packageAppImage = registerPackageAppImageTask(packagingSupport, stageJpackageInput, prepareRuntimeImage)
+val packageAppImageFallback = registerPackageAppImageFallbackTask(packagingSupport, stageJpackageInput, prepareRuntimeImage)
+val installAppImage = registerInstallAppImageTask(packagingSupport, packageAppImage, packageAppImageFallback)
+val installDesktopEntries = registerInstallDesktopEntriesTask(packagingSupport, installAppImage)
+registerInstallDesktopAppTask(installDesktopEntries)
 
-val recoverEncounterTables = registerJavaExecTask(
-    taskName = "recoverEncounterTables",
-    taskDescription = "Restore encounter tables from backup JSON. Pass --args='--latest' or --args='data/backups/encounter-tables-...json'.",
-    taskMainClass = "importer.EncounterTableRecoveryTool"
-)
+val applicationTaskSupport = ApplicationTaskSupport(project)
+val crawlerMonsters = registerCrawlerMonstersTask(applicationTaskSupport)
+val importMonsters = registerImportMonstersTask(applicationTaskSupport, crawlerMonsters)
+registerRecoverEncounterTablesTask(applicationTaskSupport)
+registerSqliteQueryTask(applicationTaskSupport)
+registerBackfillCreatureAnalysisTask(applicationTaskSupport)
+registerRebuildCreatureAnalysisTask(applicationTaskSupport)
+registerApplyCreatureOverridesTask(applicationTaskSupport)
+val crawlerItems = registerCrawlerItemsTask(applicationTaskSupport)
+val importItems = registerImportItemsTask(applicationTaskSupport, crawlerItems)
+registerCrawlerItemsSlugsTask(applicationTaskSupport)
+val crawlerSpells = registerCrawlerSpellsTask(applicationTaskSupport)
+val importSpells = registerImportSpellsTask(applicationTaskSupport, crawlerSpells)
+registerCrawlerSpellsSlugsTask(applicationTaskSupport)
+registerCrawlerTask(importMonsters)
+registerCrawlerItemsPipelineTask(importItems)
+registerCrawlerSpellsPipelineTask(importSpells)
 
-val sqliteQuery = registerJavaExecTask(
-    taskName = "sqliteQuery",
-    taskDescription = "Run ad-hoc SQLite queries without requiring a system sqlite3 binary. Usage: ./gradlew sqliteQuery --args='data/game.db .tables \"select * from dungeon_maps\"'",
-    taskMainClass = "importer.SqliteQueryTool"
-)
-
-val backfillCreatureAnalysis = registerJavaExecTask(
-    taskName = "backfillCreatureAnalysis",
-    taskDescription = "Reimport crawled monsters from stored HTML and refresh encounter-analysis caches.",
-    taskMainClass = "importer.CreatureAnalysisBackfillTool"
-)
-
-val rebuildCreatureAnalysis = registerJavaExecTask(
-    taskName = "rebuildCreatureAnalysis",
-    taskDescription = "Rebuild persisted creature analysis for current analysis inputs and refresh the active party cache.",
-    taskMainClass = "importer.RebuildCreatureAnalysisTool"
-)
-
-val applyCreatureOverrides = registerJavaExecTask(
-    taskName = "applyCreatureOverrides",
-    taskDescription = "Apply versioned creature CR/XP overrides from data/creature_overrides.csv.",
-    taskMainClass = "importer.CreatureOverridesTool"
-)
-
-val crawlerItems = registerJavaExecTask(
-    taskName = "crawlerItems",
-    taskDescription = "Run item crawler only.",
-    taskMainClass = "features.items.importer.ItemCrawler"
-)
-
-val importItems = registerJavaExecTask(
-    taskName = "importItems",
-    taskDescription = "Run item importer.",
-    taskMainClass = "features.items.importer.ItemImporter",
-    dependsOnTask = crawlerItems
-)
-
-val crawlerItemsSlugs = registerJavaExecTask(
-    taskName = "crawlerItemsSlugs",
-    taskDescription = "Build magic-item slug list only.",
-    taskMainClass = "features.items.importer.ItemCrawler",
-    taskArgs = listOf("--build-slugs")
-)
-
-val crawlerSpells = registerJavaExecTask(
-    taskName = "crawlerSpells",
-    taskDescription = "Run spell crawler only.",
-    taskMainClass = "features.spells.importer.SpellCrawler"
-)
-
-val importSpells = registerJavaExecTask(
-    taskName = "importSpells",
-    taskDescription = "Run spell importer.",
-    taskMainClass = "features.spells.importer.SpellImporter",
-    dependsOnTask = crawlerSpells
-)
-
-val crawlerSpellsSlugs = registerJavaExecTask(
-    taskName = "crawlerSpellsSlugs",
-    taskDescription = "Build spell slug list only.",
-    taskMainClass = "features.spells.importer.SpellCrawler",
-    taskArgs = listOf("--build-slugs")
-)
-
-tasks.register("crawler") {
-    group = "application"
-    description = "Run monster crawler + importer."
-    dependsOn(importMonsters)
-}
-
-tasks.register("crawlerItemsPipeline") {
-    group = "application"
-    description = "Run item crawler + importer."
-    dependsOn(importItems)
-}
-
-tasks.register("crawlerSpellsPipeline") {
-    group = "application"
-    description = "Run spell crawler + importer."
-    dependsOn(importSpells)
-}
-
-val checkNoCompiledArtifactsInSource by tasks.registering {
-    group = "verification"
-    description = "Fail if compiled .class artifacts are present inside src/."
-    val sourceRoot = layout.projectDirectory.dir("src").asFile.toPath()
-
-    doLast {
-        val offendingFiles = Files.walk(sourceRoot)
-            .use { paths: java.util.stream.Stream<Path> ->
-                paths
-                    .filter { path -> Files.isRegularFile(path) && path.fileName.toString().endsWith(".class") }
-                    .map { sourceRoot.relativize(it).toString().replace('\\', '/') }
-                    .sorted()
-                    .toList()
-            }
-
-        if (offendingFiles.isNotEmpty()) {
-            val details = offendingFiles.joinToString(separator = "\n") { " - src/$it" }
-            throw GradleException(
-                "Compiled artifacts found in src/.\n" +
-                    "Remove them with: find src -name '*.class' -delete\n" +
-                    "Offending files:\n$details"
-            )
-        }
-    }
-}
-
-val checkNoStdStreamsInFeatureServicesAndRepositories by tasks.registering {
-    group = "verification"
-    description = "Fail on new System.out/System.err usage in feature service/repository code."
-    val stdStreamPattern = Regex("""System\.(?:out|err)\.println\(""")
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-
-    doLast {
-        val offenders = fileTree("src/features") {
-            include("**/service/**/*.java")
-            include("**/repository/**/*.java")
-        }.files
-            .map { projectRoot.relativize(it.toPath()).toString().replace('\\', '/') }
-            .filter { path -> stdStreamPattern.containsMatchIn(file(path).readText()) }
-            .sorted()
-
-        if (offenders.isNotEmpty()) {
-            val details = offenders.joinToString(separator = "\n") { " - $it" }
-            throw GradleException(
-                "New System.out/System.err usage detected in feature service/repository code.\n" +
-                    "Use structured logging or UI/service-level error reporting helpers.\n" +
-                    "Offending files:\n$details"
-            )
-        }
-    }
-}
-
-val checkRepositorySqlExceptionConvention by tasks.registering {
-    group = "verification"
-    description = "Fail when new repositories catch and likely swallow SQLException."
-    val sqlCatchPattern = Regex("""catch\s*\(\s*SQLException\b""")
-    val sqlSwallowPattern = Regex(
-        """catch\s*\(\s*SQLException\b[\s\S]*?(?:System\.(?:out|err)\.println\(|return\s+(?:Optional\.empty\(\)|0L|false|null)\s*;)[\s\S]*?\}"""
-    )
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-
-    doLast {
-        val offenders = fileTree("src/features") {
-            include("**/repository/*Repository.java")
-        }.files
-            .map { projectRoot.relativize(it.toPath()).toString().replace('\\', '/') }
-            .filter { path ->
-                val content = file(path).readText()
-                sqlCatchPattern.containsMatchIn(content)
-                    && sqlSwallowPattern.containsMatchIn(content)
-            }
-            .sorted()
-
-        if (offenders.isNotEmpty()) {
-            val details = offenders.joinToString(separator = "\n") { " - $it" }
-            throw GradleException(
-                "Repository SQL contract drift detected.\n" +
-                    "Repositories should propagate SQLException and let service/application layers decide fallback behavior.\n" +
-                    "Offending files:\n$details"
-            )
-        }
-    }
-}
-
-val checkUiAsyncSubmissionConvention by tasks.registering {
-    group = "verification"
-    description = "Fail when UI code bypasses UiAsyncTasks and calls UiAsyncExecutor.submit directly."
-    val directExecutorPattern = Regex("""\bUiAsyncExecutor\.submit\(""")
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-
-    doLast {
-        val offenders = fileTree("src") {
-            include("**/*.java")
-            exclude("ui/async/**")
-        }.files
-            .map { projectRoot.relativize(it.toPath()).toString().replace('\\', '/') }
-            .filter { path -> directExecutorPattern.containsMatchIn(file(path).readText()) }
-            .sorted()
-
-        if (offenders.isNotEmpty()) {
-            val details = offenders.joinToString(separator = "\n") { " - $it" }
-            throw GradleException(
-                "UI async submission convention drift detected.\n" +
-                    "Use UiAsyncTasks.submit(...) as the public entrypoint; keep UiAsyncExecutor.submit(...) internal to ui.async.\n" +
-                    "Offending files:\n$details"
-            )
-        }
-    }
-}
-
-val checkFeatureApiBoundaryConvention by tasks.registering {
-    group = "verification"
-    description = "Fail when cross-feature consumers bypass feature api packages."
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-
-    data class FeatureBoundary(
-        val ownerPathPrefix: String,
-        val forbiddenImportPrefixes: List<String>
-    )
-
-    val importPattern = Regex("""^\s*import\s+([a-zA-Z0-9_.]+);""", RegexOption.MULTILINE)
-    val boundaries = listOf(
-        FeatureBoundary(
-            ownerPathPrefix = "features/encounter/",
-            forbiddenImportPrefixes = listOf(
-                "features.encounter.service.",
-                "features.encounter.repository.",
-                "features.encounter.ui.",
-                "features.encounter.internal.",
-                "features.encounter.partyanalysis.api."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/encountertable/",
-            forbiddenImportPrefixes = listOf(
-                "features.encountertable.service.",
-                "features.encountertable.repository.",
-                "features.encountertable.ui.",
-                "features.encountertable.recovery."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/loottable/",
-            forbiddenImportPrefixes = listOf(
-                "features.loottable.service.",
-                "features.loottable.repository.",
-                "features.loottable.ui."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/party/",
-            forbiddenImportPrefixes = listOf(
-                "features.party.service.",
-                "features.party.repository.",
-                "features.party.ui."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/world/hexmap/",
-            forbiddenImportPrefixes = listOf(
-                "features.world.hexmap.service.",
-                "features.world.hexmap.repository.",
-                "features.world.hexmap.ui."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/creatures/",
-            forbiddenImportPrefixes = listOf(
-                "features.creatures.application.",
-                "features.creatures.repository.",
-                "features.creatures.service.",
-                "features.creatures.ui.",
-                "features.creatures.maintenance."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/partyanalysis/",
-            forbiddenImportPrefixes = listOf(
-                "features.partyanalysis.application.",
-                "features.partyanalysis.repository.",
-                "features.partyanalysis.service."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/items/",
-            forbiddenImportPrefixes = listOf(
-                "features.items.service.",
-                "features.items.repository.",
-                "features.items.model.",
-                "features.items.ui.shared.",
-                "features.items.importer."
-            )
-        ),
-        FeatureBoundary(
-            ownerPathPrefix = "features/campaignstate/",
-            forbiddenImportPrefixes = listOf(
-                "features.campaignstate.repository."
-            )
-        )
-    )
-
-    doLast {
-        val offenders = fileTree("src") {
-            include("features/**/*.java")
-            include("ui/**/*.java")
-        }.files
-            .flatMap { sourceFile ->
-                val path = projectRoot.relativize(sourceFile.toPath()).toString().replace('\\', '/')
-                val relativePath = path.removePrefix("src/")
-                val imports = importPattern.findAll(sourceFile.readText())
-                    .map { it.groupValues[1] }
-                    .toList()
-                boundaries.flatMap { boundary ->
-                    if (relativePath.startsWith(boundary.ownerPathPrefix)) {
-                        emptyList()
-                    } else {
-                        imports.filter { imported ->
-                            boundary.forbiddenImportPrefixes.any(imported::startsWith)
-                        }.map { imported -> "$path -> $imported" }
-                    }
-                }
-            }
-            .sorted()
-
-        if (offenders.isNotEmpty()) {
-            val details = offenders.joinToString(separator = "\n") { " - $it" }
-            throw GradleException(
-                "Feature API boundary drift detected.\n" +
-                    "Cross-feature consumers must go through the owning feature's api package.\n" +
-                    "Offending imports:\n$details"
-            )
-        }
-    }
-}
+val checkNoCompiledArtifactsInSource = registerCheckNoCompiledArtifactsInSourceTask()
+val checkNoStdStreamsInFeatureServicesAndRepositories = registerCheckNoStdStreamsInFeatureServicesAndRepositoriesTask()
+val checkRepositorySqlExceptionConvention = registerCheckRepositorySqlExceptionConventionTask()
+val checkUiAsyncSubmissionConvention = registerCheckUiAsyncSubmissionConventionTask()
+val checkFeatureApiBoundaryConvention = registerCheckFeatureApiBoundaryConventionTask()
 
 val ownerConventionSupport = OwnerConventionSupport(project)
-
 val checkOwnerApiBoundarySourcePlacement = registerCheckOwnerApiBoundarySourcePlacementTask(ownerConventionSupport)
 val checkOwnerApiBoundaryOwnerFiles = registerCheckOwnerApiBoundaryOwnerFilesTask(ownerConventionSupport)
 val checkOwnerApiBoundaryInputFiles = registerCheckOwnerApiBoundaryInputFilesTask(ownerConventionSupport)
@@ -802,200 +175,9 @@ val checkOwnerApiBoundaryConvention = registerCheckOwnerApiBoundaryConventionTas
     checkOwnerApiBoundaryRepositoryFiles = checkOwnerApiBoundaryRepositoryFiles
 )
 
-val checkDungeonEditorArchitectureConvention by tasks.registering {
-    group = "verification"
-    description = "Fail when dungeonmap packages drift across forbidden architecture boundaries."
-    val importPattern = Regex("""^\s*import\s+([a-zA-Z0-9_.]+);""", RegexOption.MULTILINE)
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-
-    doLast {
-        fun importedPackages(sourceFile: File): List<String> {
-            return importPattern.findAll(sourceFile.readText())
-                .map { it.groupValues[1] }
-                .toList()
-        }
-
-        fun packageBoundaryOffenders(
-            sourceRoot: String,
-            forbiddenPrefixes: List<String>
-        ): List<String> {
-            return fileTree(sourceRoot) {
-                include("**/*.java")
-            }.files
-                .flatMap { sourceFile ->
-                    val path = projectRoot.relativize(sourceFile.toPath()).toString().replace('\\', '/')
-                    importedPackages(sourceFile)
-                        .filter { imported -> forbiddenPrefixes.any(imported::startsWith) }
-                        .map { imported -> "$path -> $imported" }
-                }
-                .sorted()
-        }
-
-        val legacyPackageOffenders = packageBoundaryOffenders(
-            "src/features/world/dungeonmap",
-            listOf(
-                "features.world.dungeonmap.editor.",
-                "features.world.dungeonmap.runtime.",
-                "features.world.dungeonmap.shared.")
-        )
-
-        val modelBoundaryOffenders = packageBoundaryOffenders(
-            "src/features/world/dungeonmap/model",
-            listOf(
-                "features.world.dungeonmap.application.",
-                "features.world.dungeonmap.loading.",
-                "features.world.dungeonmap.persistence.",
-                "features.world.dungeonmap.state.",
-                "features.world.dungeonmap.shell.",
-                "features.world.dungeonmap.canvas.",
-                "features.world.dungeonmap.catalog.",
-                "features.world.dungeonmap.bootstrap.")
-        )
-
-        val applicationUiOffenders = packageBoundaryOffenders(
-            "src/features/world/dungeonmap/application",
-            listOf(
-                "features.world.dungeonmap.shell.",
-                "features.world.dungeonmap.canvas.",
-                "features.world.dungeonmap.bootstrap.")
-        )
-
-        val stateBoundaryOffenders = packageBoundaryOffenders(
-            "src/features/world/dungeonmap/state",
-            listOf(
-                "features.world.dungeonmap.shell.",
-                "features.world.dungeonmap.canvas.",
-                "features.world.dungeonmap.persistence.",
-                "features.world.dungeonmap.bootstrap.")
-        )
-
-        if (legacyPackageOffenders.isNotEmpty()
-            || modelBoundaryOffenders.isNotEmpty()
-            || applicationUiOffenders.isNotEmpty()
-            || stateBoundaryOffenders.isNotEmpty()
-        ) {
-            val messages = mutableListOf<String>()
-            if (legacyPackageOffenders.isNotEmpty()) {
-                messages += "Dungeonmap must not depend on the removed editor/runtime/shared package split:\n" +
-                    legacyPackageOffenders.joinToString(separator = "\n") { " - $it" }
-            }
-            if (modelBoundaryOffenders.isNotEmpty()) {
-                messages += "Dungeon model packages must not import higher-layer dungeon packages:\n" +
-                    modelBoundaryOffenders.joinToString(separator = "\n") { " - $it" }
-            }
-            if (applicationUiOffenders.isNotEmpty()) {
-                messages += "Dungeon application packages must not import shell/canvas/bootstrap packages:\n" +
-                    applicationUiOffenders.joinToString(separator = "\n") { " - $it" }
-            }
-            if (stateBoundaryOffenders.isNotEmpty()) {
-                messages += "Dungeon state packages must not import shell/canvas/persistence/bootstrap packages:\n" +
-                    stateBoundaryOffenders.joinToString(separator = "\n") { " - $it" }
-            }
-            throw GradleException(messages.joinToString(separator = "\n\n"))
-        }
-    }
-}
-
-val checkDungeonGeometryConvention by tasks.registering {
-    group = "verification"
-    description = "Fail when dungeon public APIs drift away from canonical geometry carriers."
-
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-    val allowedRawGeometryCarrierFiles = setOf(
-        "src/features/world/dungeon/geometry/GridArea.java",
-        "src/features/world/dungeon/geometry/GridBoundary.java",
-        "src/features/world/dungeon/geometry/GridPath.java",
-        "src/features/world/dungeon/geometry/GridSegmentPath.java"
-    )
-    val rawGeometryTypePattern = Regex("""\b(?:Collection|List|Set)<Grid(?:Point|Segment)>""")
-    val forbiddenGeometryDialectPattern = Regex(
-        """\b(?:[A-Za-z0-9_]*2x|movedBy|translatedBy|touchingCells|occupiedPositions|boundarySegments|cellX|cellY)\b"""
-    )
-
-    fun signatureBlocks(sourceText: String): List<String> {
-        val lines = sourceText.lines()
-        val blocks = mutableListOf<String>()
-        var index = 0
-        while (index < lines.size) {
-            val line = lines[index].trim()
-            if (!line.startsWith("public ") && !line.startsWith("protected ")) {
-                index++
-                continue
-            }
-            val block = StringBuilder(line)
-            while (!block.contains("{") && !block.contains(";") && index + 1 < lines.size) {
-                index++
-                block.append(' ').append(lines[index].trim())
-            }
-            blocks += block.toString()
-            index++
-        }
-        return blocks
-    }
-
-    doLast {
-        val offenders = fileTree("src/features/world/dungeon") {
-            include("**/*.java")
-        }.files
-            .flatMap { sourceFile ->
-                val path = projectRoot.relativize(sourceFile.toPath()).toString().replace('\\', '/')
-                signatureBlocks(sourceFile.readText()).flatMap { signature ->
-                    val problems = mutableListOf<String>()
-                    if (path !in allowedRawGeometryCarrierFiles && rawGeometryTypePattern.containsMatchIn(signature)) {
-                        problems += "public/protected seam exposes raw GridPoint/GridSegment collections"
-                    }
-                    if (forbiddenGeometryDialectPattern.containsMatchIn(signature)) {
-                        problems += "public/protected seam reintroduces forbidden geometry dialect"
-                    }
-                    problems.map { problem -> "$path -> $problem -> $signature" }
-                }
-            }
-            .sorted()
-
-        if (offenders.isNotEmpty()) {
-            val details = offenders.joinToString(separator = "\n") { " - $it" }
-            throw GradleException(
-                "Dungeon geometry convention drift detected.\n" +
-                    "Public and protected dungeon seams must use the canonical geometry carriers and names.\n" +
-                    "Offending signatures:\n$details"
-            )
-        }
-    }
-}
-
-val deleteEmptySourceDirectories by tasks.registering {
-    group = "build setup"
-    description = "Delete empty source directories left behind by refactors."
-
-    val projectRoot = layout.projectDirectory.asFile.toPath()
-    val sourceRoots = listOf("src", "resources")
-
-    doLast {
-        val deletedDirectories = sourceRoots.asSequence()
-            .map(layout.projectDirectory::dir)
-            .map { it.asFile }
-            .filter(File::exists)
-            .flatMap { root ->
-                root.walkBottomUp()
-                    .filter(File::isDirectory)
-                    .filter { directory -> directory != root }
-                    .filter { directory -> directory.listFiles()?.isEmpty() == true }
-                    .onEach(File::delete)
-                    .map { directory ->
-                        projectRoot.relativize(directory.toPath()).toString().replace('\\', '/')
-                    }
-            }
-            .sorted()
-            .toList()
-
-        if (deletedDirectories.isNotEmpty()) {
-            logger.lifecycle(
-                "Deleted empty source directories:\n{}",
-                deletedDirectories.joinToString(separator = "\n") { " - $it" }
-            )
-        }
-    }
-}
+val checkDungeonEditorArchitectureConvention = registerCheckDungeonEditorArchitectureConventionTask()
+val checkDungeonGeometryConvention = registerCheckDungeonGeometryConventionTask()
+val deleteEmptySourceDirectories = registerDeleteEmptySourceDirectoriesTask()
 
 tasks.named("check") {
     dependsOn(checkNoCompiledArtifactsInSource)
